--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "randomstring": "^1.2.3"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
